# dfinity_rust_starter

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
canisters/dfinity_rust_starter_assets/public/: index.js
canisters/frontend/public/: index.js
canisters/graphql/: Cargo.toml
canisters/graphql/src/: graphql.did  graphql.rs  schema.graphql
canisters/greet/: Cargo.toml
canisters/greet/src/: greet.did  greet.rs
canisters/playground/: index.js  playground.js
src/dfinity_rust_starter_assets/public/: index.js
