[package]
name = "greet"
version = "0.1.0"
authors = ["Dan Steren <daniel.d.steren@gmail.com>"]
edition = "2018"

[lib]
path = "src/greet.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = { version = "0.2.1" }
ic-cdk-macros = { version = "0.2.1" }
